	Added serialVersionUID to various classes
	Increased minimum java version to 1.5
	Added null checking to multiple equals() methods
	Changed usage of StringBuffer to StringBuilder
	Speeded up genotypeToString in various VectorIndividuals
	Fixed fall-through on new BitVectorIndividual mutation mechanism
	Tweak to all VectorIndividuals, removing useless code that copies the
		gene value back during mutation.
	Evolve.primeGenerator pulses one more time (624 * 2 + 1) for good
		measure.  This will cause results to differ from previous
		versions.
	Added ec.eval.MetaProblem
	Promoted 'evaluations' as a parameter for EvolutionState; now both
		SimpleEvolutionState and SteadyStateEvolutionState understand it
	In SteadyStateEvolution, the minimum number of evaluations must be
		equal to the sum of all individuals in the population (it
		used to be, incorrectly, just subpopulation 0).
	Bug fixes to comments of PAGIE1 and to implementation of PAGIE2.
		Thanks to Tom Helmuth <thelmuth@cs.umass.edu>
	Revision to SimpleEvaluator to allow for fine-grained multithreaded
		evaluation.  Slight tweaks to SteadyStateEvaluator to be
		consistent with it.  Thanks to Ralf Buschermöhle 
		<lobequadrat@googlemail.com> for the idea and impetus.
	Fixed minor documentation errors
	Added Khaled Talukder as a major contributor
	Added majority problem
	n-frac changed to n-fraction in BestSelection documentation and errors
	Removed hack in SlaveConnection
	Made parameters.exists(param) deprecated.  Updated RandomRestarts
	Fixed bug in duplicate retries on all vector individuals	
	KozaFitness checks for negative fitnesses now even though it should
		be impossible.
	missing maximize[] array restored in MultiobjectiveFitness
	missing randomWalkProbability[] array restored in IntegerVectorSpecies
	Added Lennard-Jones problem to ecsuite	
	nguyen-11 and nguyen-12 removed from Benchmarks, and nguyen-9 and
		nguyen-10 corrected in terms of range and sample points
	lunacek added to ecsuite
	Added mona
